Fix deprecated warnings for JDK9